--- a/Views/Booking/AddVehicle.cshtml
+++ b/Views/Booking/AddVehicle.cshtml
@@ -1,4 +1,4 @@
-﻿@model HomeworkAssignment1.Models.Vehicle
+﻿﻿@model HomeworkAssignment1.Models.Vehicle
 
 @{
     ViewBag.Title = "Add New Vehicle";
