--- a/Views/Booking/EditDriver.cshtml
+++ b/Views/Booking/EditDriver.cshtml
@@ -9,7 +9,7 @@
     <h2>Edit Driver</h2>
     <hr />
 
-    @using (Html.BeginForm("SaveDriver", "Booking", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    @using (Html.BeginForm("SaveDriver", "Booking", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.driverID)
@@ -18,7 +18,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.driverFirstName, htmlAttributes: new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.driverFirstName, new { htmlAttributes = new { @class = "form-control", @id = "driverFirstName" } })
+                @Html.EditorFor(model => model.driverFirstName, new { htmlAttributes = new { @class = "form-control", id = "driverFirstName" } })
                 @Html.ValidationMessageFor(model => model.driverFirstName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -26,7 +26,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.driverLastName, htmlAttributes: new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.driverLastName, new { htmlAttributes = new { @class = "form-control", @id = "driverLastName" } })
+                @Html.EditorFor(model => model.driverLastName, new { htmlAttributes = new { @class = "form-control", id = "driverLastName" } })
                 @Html.ValidationMessageFor(model => model.driverLastName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +34,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.driverPhoneNumber, htmlAttributes: new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.driverPhoneNumber, new { htmlAttributes = new { @class = "form-control", @id = "driverPhoneNumber" } })
+                @Html.EditorFor(model => model.driverPhoneNumber, new { htmlAttributes = new { @class = "form-control", id = "driverPhoneNumber" } })
                 @Html.ValidationMessageFor(model => model.driverPhoneNumber, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,15 +45,17 @@
                 @Html.DropDownListFor(model => model.driverServiceType,
                     new SelectList(HomeworkAssignment1.Models.Services.serviceTypes),
                     "Select Service Type",
-                    new { @class = "form-control", @id = "driverServiceType" })
+                    new { @class = "form-control", id = "driverServiceType" })
                 @Html.ValidationMessageFor(model => model.driverServiceType, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.driverImage, "Driver Image URL", htmlAttributes: new { @class = "col-md-2 col-form-label" })
+            @Html.LabelFor(model => model.driverImage, "Driver Image", htmlAttributes: new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.driverImage, new { htmlAttributes = new { @class = "form-control", @id = "driverImage" } })
+                <input type="file" id="driverImageFile" class="form-control-file" accept="image/*">
+                @Html.HiddenFor(model => model.driverImage, new { id = "driverImage" })
+                <div id="imagePreview" class="mt-2" style="max-width: 150px;"></div>
                 @Html.ValidationMessageFor(model => model.driverImage, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -70,79 +72,50 @@
 @section Scripts {
     <script>
         $(document).ready(function() {
-            // Add phone number formatting if inputmask is available
-            if (typeof $.fn.inputmask !== 'undefined') {
-                $('#driverPhoneNumber').inputmask('(999) 999-9999');
-            }
+            // Phone number masking
+            $('#driverPhoneNumber').inputmask('(999) 999-9999');
 
-            // For localStorage drivers, load data from localStorage
+            // Image preview and conversion
+            $('#driverImageFile').change(function() {
+                const file = this.files[0];
+                if (file) {
+                    if (file.size > 500000) { // 500KB limit
+                        alert('Image size should be less than 500KB');
+                        $(this).val('');
+                        return;
+                    }
+
+                    const reader = new FileReader();
+                    reader.onload = function(e) {
+                        // Display preview
+                        $('#imagePreview').html(`<img src="${e.target.result}" class="img-thumbnail" />`);
+                        // Store base64 in hidden field
+                        $('#driverImage').val(e.target.result);
+                    }
+                    reader.readAsDataURL(file);
+                }
+            });
+
+            // Load driver data from localStorage if it's a localStorage driver
             @if (Model.isFromLocalStorage)
             {
                 <text>
-                var driverId = '@Model.driverID';
-                var driverData = localStorage.getItem('driver_' + driverId);
-
-                console.log('Loading localStorage driver:', driverId, driverData); // Debug log
-
+                var driverData = localStorage.getItem('driver_' + '@Model.driverID');
                 if (driverData) {
                     var fields = driverData.split('|');
-                    if (fields.length >= 4) {
-                        $('#driverFirstName').val(fields[0]);
-                        $('#driverLastName').val(fields[1]);
-                        $('#driverPhoneNumber').val(fields[2]);
-                        $('#driverServiceType').val(fields[3]);
+                    $('#driverFirstName').val(fields[0]);
+                    $('#driverLastName').val(fields[1]);
+                    $('#driverPhoneNumber').val(fields[2]);
+                    $('#driverServiceType').val(fields[3]);
 
-                        // Load image if available
-                        if (fields.length > 4 && fields[4]) {
-                            $('#driverImage').val(fields[4]);
-                        }
+                    // Load image if available
+                    if (fields.length > 4 && fields[4]) {
+                        $('#imagePreview').html(`<img src="${fields[4]}" class="img-thumbnail" />`);
+                        $('#driverImage').val(fields[4]);
                     }
-                } else {
-                    console.error('No localStorage data found for driver:', driverId);
-                    alert('Driver data not found in localStorage. Redirecting to manage page.');
-                    window.location.href = '@Url.Action("ManagePage", "Booking")';
                 }
                 </text>
             }
-
-            // Form validation
-            $('form').on('submit', function(e) {
-                var isValid = true;
-                var firstName = $('#driverFirstName').val().trim();
-                var lastName = $('#driverLastName').val().trim();
-                var phone = $('#driverPhoneNumber').val().trim();
-                var serviceType = $('#driverServiceType').val();
-
-                // Clear previous validation messages
-                $('.text-danger').empty();
-
-                if (!firstName) {
-                    $('#driverFirstName').next('.text-danger').text('First name is required');
-                    isValid = false;
-                }
-
-                if (!lastName) {
-                    $('#driverLastName').next('.text-danger').text('Last name is required');
-                    isValid = false;
-                }
-
-                if (!phone) {
-                    $('#driverPhoneNumber').next('.text-danger').text('Phone number is required');
-                    isValid = false;
-                }
-
-                if (!serviceType) {
-                    $('#driverServiceType').next('.text-danger').text('Service type is required');
-                    isValid = false;
-                }
-
-                if (!isValid) {
-                    e.preventDefault();
-                    return false;
-                }
-
-                return true;
-            });
         });
     </script>
 }
